// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Title /> > should render 1`] = `
<div
  class="title-container"
  data-astro-cid-qsgiqu7o=""
  data-astro-source-file="/home/lapanti/code/laurilavanti/src/components/titleBanner/Title.astro"
  data-astro-source-loc="50:30"
  style="--colorsWhite: rgb(255, 255, 255);--contentPadding: 0.5rem;--sizes05: 0.5rem;--sizes1: 1rem;--sizes5: 5rem;--sizes375: 37.5rem;"
>
   
  <h1
    data-astro-cid-dqoe6t4j=""
    data-astro-source-file="/home/lapanti/code/laurilavanti/src/components/titleBanner/title/H1.astro"
    data-astro-source-loc="20:6"
    style="--h1FontFamily: &#34;Krana Fat&#34;, Trebuchet MS;--h1FontSize: 3.75rem;--h1FontWeight: 1000;--h1LineHeight: 1;"
  >
    Test Title
  </h1>
   
  <aside
    aria-label="Kirjoituksen Test Title meta-tiedot"
    data-astro-cid-k4jemuzu=""
    data-astro-source-file="/home/lapanti/code/laurilavanti/src/components/Meta.astro"
    data-astro-source-loc="67:31"
    style="--colorsMoss: rgb(90, 94, 0);--definitionFontFamily: &#34;IBM Plex Mono&#34;, Lucida Sans Typewriter;--definitionFontSize: 1rem;--definitionFontWeight: 500;--definitionLineHeight: 1.5rem;--definitionTextTransform: uppercase;--sizes0: 0px;--sizes05: 0.5rem;--sizes1: 1rem;"
  >
     
    <time
      data-astro-cid-k4jemuzu=""
      data-astro-source-file="/home/lapanti/code/laurilavanti/src/components/Meta.astro"
      data-astro-source-loc="68:88"
      datetime="2026-01-01"
      style="font-size:1.875rem;line-height:2.25rem;font-family:&#34;IBM Plex Sans&#34;, Trebuchet MS;font-weight:300;--colorsMoss: rgb(90, 94, 0);--definitionFontFamily: &#34;IBM Plex Mono&#34;, Lucida Sans Typewriter;--definitionFontSize: 1rem;--definitionFontWeight: 500;--definitionLineHeight: 1.5rem;--definitionTextTransform: uppercase;--sizes0: 0px;--sizes05: 0.5rem;--sizes1: 1rem;"
    >
      01.01.2026
    </time>
     
    <ul
      data-astro-cid-k4jemuzu=""
      data-astro-source-file="/home/lapanti/code/laurilavanti/src/components/Meta.astro"
      data-astro-source-loc="71:17"
      style="--colorsMoss: rgb(90, 94, 0);--definitionFontFamily: &#34;IBM Plex Mono&#34;, Lucida Sans Typewriter;--definitionFontSize: 1rem;--definitionFontWeight: 500;--definitionLineHeight: 1.5rem;--definitionTextTransform: uppercase;--sizes0: 0px;--sizes05: 0.5rem;--sizes1: 1rem;"
    >
       
      <li
        data-astro-cid-k4jemuzu=""
        data-astro-source-file="/home/lapanti/code/laurilavanti/src/components/Meta.astro"
        data-astro-source-loc="73:25"
        style="--colorsMoss: rgb(90, 94, 0);--definitionFontFamily: &#34;IBM Plex Mono&#34;, Lucida Sans Typewriter;--definitionFontSize: 1rem;--definitionFontWeight: 500;--definitionLineHeight: 1.5rem;--definitionTextTransform: uppercase;--sizes0: 0px;--sizes05: 0.5rem;--sizes1: 1rem;"
      >
         
        <a
          data-astro-cid-k4jemuzu=""
          data-astro-source-file="/home/lapanti/code/laurilavanti/src/components/Meta.astro"
          data-astro-source-loc="74:63"
          href="/kategoria/tag-1/"
          style="--colorsMoss: rgb(90, 94, 0);--definitionFontFamily: &#34;IBM Plex Mono&#34;, Lucida Sans Typewriter;--definitionFontSize: 1rem;--definitionFontWeight: 500;--definitionLineHeight: 1.5rem;--definitionTextTransform: uppercase;--sizes0: 0px;--sizes05: 0.5rem;--sizes1: 1rem;"
        >
          #Tekoäly
        </a>
         
      </li>
       
    </ul>
     
  </aside>
   
</div>
`;

exports[`<Title /> > should render minimal 1`] = `
<div
  class="title-container"
  data-astro-cid-qsgiqu7o=""
  data-astro-source-file="/home/lapanti/code/laurilavanti/src/components/titleBanner/Title.astro"
  data-astro-source-loc="50:30"
  style="--colorsWhite: rgb(255, 255, 255);--contentPadding: 0.5rem;--sizes05: 0.5rem;--sizes1: 1rem;--sizes5: 5rem;--sizes375: 37.5rem;"
>
   
  <h1
    data-astro-cid-dqoe6t4j=""
    data-astro-source-file="/home/lapanti/code/laurilavanti/src/components/titleBanner/title/H1.astro"
    data-astro-source-loc="20:6"
    style="--h1FontFamily: &#34;Krana Fat&#34;, Trebuchet MS;--h1FontSize: 3.75rem;--h1FontWeight: 1000;--h1LineHeight: 1;"
  >
    Test Title
  </h1>
    
</div>
`;
